--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.autoSave": "afterDelay",
     "files.exclude": {
         "": true
-    }
+    },
+    "postman.settings.dotenv-detection-notification-visibility": false
 }
